--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="./style/style.css">
+  <script src="./js/jquery-1.8.3.js"></script>
+  <script src="./js/jquery.mousewheel.js"></script>
+  <script src="./js/TweenMax.js"></script>
   <script src="./js/main.js"></script>
 </head>
-<body style="height: 8500px">
+<body>
 <div class="menu_wrapper">
   <div class="menu">
     <div class="content">
